test: add unit tests for card fetcher module with mock data
This commit follows the "test:" prefix rule and clearly describes the addition of unit tests for the card fetcher functionality, including mock data for testing API

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 streamlit
 requests
-beautifulsoup4==4.12.3
-lxml==4.9.1
+pandas
+playwright
+playwright-stealth
+beautifulsoup4
 python-dotenv==0.21.1
 pytest==7.4.0
 pytest-mock==3.11.1
